# T2

./: .gitignore  CMakeLists.txt  Da - PowerPoint - T2.pptx  README.md
output/: nodes.txt  safe_nodes.txt
src/: abstractAlgorithm.cpp  abstractAlgorithm.h  applicationController.cpp  applicationController.h  dataIO.cpp  dataIO.h  dataStructs.h  main.cpp
src/algorithms/: firstScenario.cpp  firstScenario.h  secondScenario.cpp  secondScenario.h  thirdScenario.cpp  thirdScenario.h  thirdScenario_.cpp  thirdScenario_.h
